hide overflow on html as a temporary fix for strange overflow behaviour of columns

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,7 @@
 html {
   background-color: black;
   color: white;
+  overflow: hidden;
 }
 
 html,
